<resources>
    <string name="app_name">Parky</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="admin">ADMIN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="scan_here">SCAN HERE</string>
    <string name="photo_profile">Photo profile</string>
    <string name="ok">Ok</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="add_user_data">Add user data</string>
    <string name="name">Name</string>
    <string name="license_plate">License Plate</string>
    <string name="back_from_user_add_activity">Back from user add activity</string>
    <string name="your_email_or_password_is_wrong">Your email or password is wrong</string>
    <string name="student_id">Student ID</string>
    <string name="muhammadiyah_university_of_surakarta">Muhammadiyah University of Surakarta</string>
    <string name="search_by_student_id_or_plate">Search by student ID or license plate</string>
    <string name="search_by_student_id_or_name">Search by student ID or name</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="login_failed">%s</string>
    <string name="activity">Activity</string>
    <string name="settings">Settings</string>
    <string name="parky_logo">Parky logo</string>
    <string name="user_list">User List</string>
    <string name="back_to_admin_home_page">Back to admin home page</string>
    <string name="photo_profile_default">photo profile default</string>
    <string name="add_user">Add User</string>
    <string name="are_you_sure_to_delete_this_user">Are you sure to delete this user?</string>
    <string name="cancel">Cancel</string>
    <string name="login">Login</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="close">close</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="header_image_login">Header image login</string>
    <string name="log_in_to_your_existing_account">Log in to your existing account</string>
    <string name="scan_admin">scan admin</string>
    <string name="list_user">list user</string>
    <string name="point_your_camera_to_scan_the_qr_code">Point your camera to scan the QR code</string>
    <string name="from">From</string>
    <string name="overlogic_universe">Overlogic Universe</string>
    <string name="ticket_shape">ticket shape</string>
    <string name="barcode">barcode</string>
    <string name="button_to_show_dialog_change_pass">button to show dialog change pass</string>
    <string name="button_to_logout">button to logout</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="delete">Delete</string>
    <string name="parked">Parked</string>
    <string name="parking_history">Parking History</string>
    <string name="empty_data">Empty data</string>
    <string name="last_activity">Last Activity</string>
</resources>