<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppinsbold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_in_to_your_existant_account"
            android:textColor="@color/grey"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:text="@string/email_address"
            android:textColor="@color/grey"
            android:drawablePadding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_open_24"
            android:text="@string/password"
            android:textColor="@color/grey"
            android:drawablePadding="15dp"
            android:layout_marginHorizontal="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/primaryColor"
            android:layout_gravity="end"
            android:fontFamily="@font/poppinsmedium"
            />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/login"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="14sp"
            android:layout_marginVertical="20dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lightGrey"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

</LinearLayout>