<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.auth.presentation.AdminHomeActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="112dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_parky_with_text" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_logout_admin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_logout_24_blue" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGrey" />
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_header"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsmedium"
                android:paddingHorizontal="20dp"
                android:text="@string/welcome_back"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppinsbold"
                android:paddingHorizontal="20dp"
                android:text="@string/admin"
                android:textColor="@color/primaryColor"
                android:textSize="30sp" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:paddingHorizontal="20dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppinsbold"
                android:paddingHorizontal="20dp"
                android:text="@string/activity"
                android:textColor="@color/primaryColor"
                android:textSize="20sp"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_circle_down_24" />

            <ImageView
                android:id="@+id/iv_history"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:adjustViewBounds="true"
                android:background="@drawable/riwayat"
                android:clickable="true"
                android:contentDescription="@string/hello_admin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/poppinsbold"
                android:paddingHorizontal="20dp"
                android:text="@string/settings"
                android:textColor="@color/primaryColor"
                android:textSize="20sp"
                app:drawableEndCompat="@drawable/ic_baseline_arrow_circle_down_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_user"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="@drawable/userModel"
                        android:contentDescription="@string/list_user"
                        android:clickable="true"
                        android:scaleType="fitCenter" />

                    <View
                        android:layout_width="20dp"
                        android:layout_height="0dp" />

                    <ImageView
                        android:id="@+id/iv_admin"
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:background="@drawable/admin"
                        android:contentDescription="@string/add_user"
                        android:clickable="true"
                        android:scaleType="fitCenter" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_scan_code_admin"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/scan"
                    android:contentDescription="@string/scan_admin"
                    android:clickable="true" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>

