<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_radius_15"
    android:backgroundTint="@color/lightBlue"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_title_delete_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_to_delete_this_user"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppinssemibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
/>
    <TextView
        android:id="@+id/tv_confirm_delete_user"
        android:layout_width="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_radius_5"
        android:backgroundTint="#354260"
        android:fontFamily="@font/poppinssemibold"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_delete_dialog" />

    <TextView
        android:id="@+id/tv_cancel_delete_user"
        android:layout_width="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_radius_5"
        android:backgroundTint="#F85656"
        android:fontFamily="@font/poppinssemibold"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:clickable="true"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_confirm_delete_user"
        app:layout_constraintEnd_toStartOf="@id/tv_confirm_delete_user" />


</androidx.constraintlayout.widget.ConstraintLayout>