<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/border_radius_15"
    android:backgroundTint="@color/lightBlue"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/iv_photo_profile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/photo_profile"
            android:src="@drawable/logo_ums"
            android:background="@color/darkBlue"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_username_on_change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinssemibold"
        tools:text="Username"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/iv_photo_profile"
        app:layout_constraintTop_toTopOf="@id/iv_photo_profile" />

    <TextView
        android:id="@+id/tv_user_id_on_change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppinssemibold"
        tools:text="L200220250"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:translationY="-5dp"
        app:layout_constraintStart_toEndOf="@id/iv_photo_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_username_on_change_pass" />


    <androidx.cardview.widget.CardView
        android:id="@+id/iv_back_from_change_pass"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_close_dialog_change_pass"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/baseline_close_24_blue"
            android:contentDescription="@string/close" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tv_ubah_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_photo_profile" />

    <EditText
        android:id="@+id/edt_massukan_pass_baru"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:autofillHints="new pass"
        android:background="@drawable/border_radius_15"
        android:backgroundTint="@color/darkBlue"
        android:gravity="center"
        android:inputType="textVisiblePassword"
        android:hint="@string/enter_new_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ubah_password" />


    <TextView
        android:id="@+id/tv_submit_change_pass"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_radius_15"
        android:backgroundTint="#354260"
        android:fontFamily="@font/poppinssemibold"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_massukan_pass_baru" />


</androidx.constraintlayout.widget.ConstraintLayout>